# sbe-cte-bench

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  IMPLEMENTATION-PLAN.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  nightly.yml  release.yml
data/: README.md
docs/: 00-overview.md  01-methodology.md  02-infrastructure.md  03-data-model.md  04-indexes.md  05-scenarios-index.md  06-instrumentation.md  07-reporting.md  08-fairness-charter.md  09-failure-modes.md  10-glossary.md
docs/scenarios/: S01-baseline.md  S02-sbe-prefix-best-case.md  S03-boundary-tax.md  S04-100mb-stage-wall.md  S05-16mb-doc-cap.md  S06-lookup-sharded.md  S07-graphlookup-recursive.md  S08-window-functions.md  S09-predicate-pushdown.md  S10-top-n.md  S12-concurrent.md  S13-planner-stability.md  S14-write-path.md  S15-plan-cache.md
infra/: Dockerfile.mongo-shard-router  compose.sharded.yaml  compose.standard.yaml  install-mongodb-cgroup-capped.sh  oracle-bench.sql  oracle-statspack.sql  shard-router-init.sh  supervisord.conf  topology-swap.sh
results/: README.md
results/sql_monitor/: S01-default-20260428T001015Z.html  S02-default-20260428T001140Z.html  S03-k=0-20260428T001302Z.html  S03-k=2-20260428T001423Z.html  S03-k=3-20260428T001548Z.html  S03-k=4-20260428T001711Z.html  S03-k=5-20260428T001829Z.html  S03-k=6-20260428T001948Z.html  S03-k=7-20260428T002113Z.html  S03-k=8-20260428T002231Z.html  S04-ws=100MB-20260428T011607Z.html  S04-ws=150MB-20260428T012924Z.html  S04-ws=200MB-20260428T014238Z.html  S04-ws=250MB-20260428T015559Z.html  S04-ws=25MB-20260428T003558Z.html  S04-ws=50MB-20260428T004923Z.html  S04-ws=75MB-20260428T010248Z.html  S05-base-20260428T015601Z.html  S05-merge-20260428T015606Z.html  S05-out-20260428T015604Z.html  S05-rewrite-bucket-20260428T015602Z.html  S07-org-d10-20260428T015647Z.html  S07-org-d15-20260428T015726Z.html  S07-org-d2-20260428T015608Z.html  S07-org-d5-20260428T015609Z.html  S07-path-d10-20260428T015807Z.html  S07-path-d5-20260428T015728Z.html  S08-A-clean-prefix-20260428T020514Z.html  S08-B-bucketAuto-20260428T021606Z.html  S08-B-facet-20260428T021119Z.html  S08-B-graphLookup-20260428T022556Z.html  S09-A-well-ordered-20260428T022650Z.html  S09-B-lookup-first-20260428T022746Z.html  S09-C-facet-wrap-20260428T022812Z.html  S10-A-top-n-alone-20260428T022919Z.html  S10-B-top-n-lookup-20260428T023031Z.html  S10-C-top-n-facet-20260428T023135Z.html  S12-N=1-20260428T023250Z.html  S12-N=2-20260428T023404Z.html  S12-N=4-20260428T023520Z.html  (+8 more)
src/sbe_cte_bench/: __init__.py  __main__.py  cli.py
src/sbe_cte_bench/config/: run_record.py
src/sbe_cte_bench/data/: generator.py  load_mongo.py  load_oracle.py  schema.py
src/sbe_cte_bench/drivers/: mongo.py  oracle.py
src/sbe_cte_bench/equivalence/: canonicalize.py  hash.py  verify.py
src/sbe_cte_bench/observability/: mongo_explain.py  oracle_statspack.py  oracle_xplan.py  os_counters.py  spill_metrics.py
src/sbe_cte_bench/reporting/: aggregate.py  cross_scenario.py  html_dashboard.py  markdown.py  plot.py
src/sbe_cte_bench/runner/: alternating.py  scenario_runner.py  timing.py  warmup.py
src/sbe_cte_bench/scenarios/: __init__.py  _base.py  s01_baseline.py  s02_sbe_prefix.py  s03_boundary_tax.py  s04_stage_wall.py  s05_doc_cap.py  s06_lookup_sharded.py  s07_graphlookup.py  s08_window_functions.py  s09_predicate_pushdown.py  s10_top_n.py  s12_concurrent.py  s13_planner_stability.py  s14_write_path.py  s15_plan_cache.py
tests/: conftest.py
tests/fixtures/explain/: express_path.json  sbe_all_stages.json  sbe_classic_boundary_at_4.json
tests/fixtures/profile/: group_spill.json  no_spill.json
tests/fixtures/statspack/: sample_report.txt
tests/fixtures/xplan/: inlined_ctes.txt  materialized_cte.txt
tests/property/: test_canonicalize.py
tests/unit/: test_aggregator.py  test_cli.py  test_cross_scenario.py  test_data_generator.py  test_data_schema.py  test_drivers.py  test_hash.py  test_markdown_report.py  test_mongo_explain_parser.py  test_oracle_statspack.py  test_oracle_xplan.py  test_os_counters.py  test_plot.py  test_run_record_schema.py  test_runner_orchestration.py  test_scenario_runner.py  test_scenarios.py  test_smoke.py  test_spill_metrics.py  test_timing.py  test_verify.py
